extension/wave.css
.container-blip {
	padding-top: 0 !important;
}
.editor-container {
	margin-left: 36px !important;
}
.blips-container {
	margin-left: 12px !important;
	box-shadow: none !important;
}
.wave-blips > .blip-container > .editor-container {
	margin-left: -34px !important;
}

.blip-container {
	border-width: 1px !important;
	border-color: transparent transparent #D8D8D8 !important;
	border-radius: 0 !important;
}
.blip-container:first-child {
	border-top-color: #D8D8D8 !important;
}
.blip-container.non-editable {
	background-color: #F5F5F5 !important;
}
.blip-container.active:not(.edit-mode) {
	/*border-color: #C0C0C0 !important;*/
	border-left-color: #4D90F0 !important;
}
.blip-container.active.edit-mode {
	border-color: #4D90FE !important;
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.3) !important;
}
.blip-menu-container:not(.fixed) {
	left: -1px !important;
}
.bottom-blip-menu {
	border: 1px solid #D9D9D9 !important;
	border-top-color: #C0C0C0 !important;
	border-radius: 0 !important;
	
	background-color: white !important;
	
	left: -1px !important;
	right: -1px !important;
	bottom: -18px !important;
}
.bottom-blip-menu:hover {
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1) !important;
}
.bottom-blip-menu:active {
	box-shadow: inset 0 1px 2px rgba(0,0,0,0.3) !important;
}
.bottom-blip-menu button div.text {
	color: #999 !important;
}
.bottom-blip-menu button div.gradient {
	background: linear-gradient(rgba(255,255,255,0) 30%, rgba(255,255,255,1) 80%) !important;
}

.blip-info {
	float: left !important;
	margin-top: 0 !important;
}
.blip-info .edit-date {
	position: static !important;
	right: auto !important;
}

.contributors {
	right: auto !important;
	left: -5px !important;
}
.contributors .contributor {
	float: left !important;
}

